GEt and post customer API
