# src/swagger/ourbank-api.yml
@@ -1,5 +1,4 @@
-# swagger/openapi.yaml
-openapi: 3.1.0
+openapi: "3.0.3"
 info:
   title: OurBank API
   version: 1.0.0
@@ -48,10 +47,9 @@ components:
           items:
             $ref: "#/components/schemas/Customer"
 
-    Address:
+    AddressBase:
       type: object
       required:
-        - customerId
         - type
         - line1
         - city
@@ -61,10 +59,6 @@ components:
         - phoneIsdCode
         - phoneNumber
       properties:
-        id:
-          type: integer
-        customerId:
-          type: integer
         type:
           type: string
           enum: [Current, Permanent]
@@ -96,17 +90,24 @@ components:
           type: string
           pattern: '^\d{10}$'
 
-    Passport:
+    Address:
+      allOf:
+        - $ref: "#/components/schemas/AddressBase"
+        - type: object
+          properties:
+            id:
+              type: integer
+            customerId:
+              type: integer
+
+    PassportBase:
       type: object
       required:
         - passportNumber
         - issueDate
         - expiryDate
         - issuingCountry
-        - customerId
       properties:
-        id:
-          type: integer
         passportNumber:
           type: string
           pattern: '^[A-Z]\d{7}$'
@@ -120,8 +121,29 @@ components:
         issuingCountry:
           type: string
           maxLength: 50
-        customerId:
-          type: integer
+
+    Passport:
+      allOf:
+        - $ref: "#/components/schemas/PassportBase"
+        - type: object
+          properties:
+            id:
+              type: integer
+            passportNumber:
+              type: string
+              pattern: '^[A-Z]\d{7}$'
+              description: The passport Number
+            issueDate:
+              type: string
+              format: date
+            expiryDate:
+              type: string
+              format: date
+            issuingCountry:
+              type: string
+              maxLength: 50
+            customerId:
+              type: integer
 
     Customer:
       type: object
@@ -207,8 +229,89 @@ components:
         passport:
           $ref: "#/components/schemas/Passport"
 
+    CreateCustomerResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+        customerId:
+          type: string
+        shortName:
+          type: string
+        fullName:
+          type: string
+          maxLength: 100
+        type:
+          type: string
+          enum: [Individual, Corporate]
+
+    CreateCustomerRequest:
+      type: object
+      properties:
+        fullName:
+          type: string
+          maxLength: 100
+        shortName:
+          type: string
+          maxLength: 50
+        type:
+          type: string
+          enum: [Individual, Corporate]
+        branchCode:
+          type: string
+          pattern: '^\d{3}$'
+        prefix:
+          type: string
+          enum: [Mr., Mrs., Ms., Dr.]
+        firstName:
+          type: string
+          maxLength: 50
+        middleName:
+          type: string
+          maxLength: 50
+        lastName:
+          type: string
+          maxLength: 50
+        gender:
+          type: string
+          enum: [Male, Female, Other]
+        udid:
+          type: string
+          pattern: '^\d{16}$'
+        dateOfBirth:
+          type: string
+          format: date-time
+        residentStatus:
+          type: string
+          enum: [Resident, Non-Resident]
+        minor:
+          type: boolean
+        currentAddress:
+          $ref: "#/components/schemas/AddressBase"
+        permanentAddress:
+          $ref: "#/components/schemas/AddressBase"
+        passport:
+          $ref: "#/components/schemas/PassportBase"
+
 paths:
   /api/customers:
+    post:
+      summary: Create a new Customer
+      tags: [Customers]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateCustomerRequest"
+      responses:
+        200:
+          description: Customer created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateCustomerResponse"
+
     get:
       summary: Retrieve a paginated list of customers
       tags: [Customers]
